<resources>
    <string name="app_name">My Application10</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Login</string>
    <string name="previous">Voltar</string>

    <string name="id_txt_login">Aplicativo de Testes</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_logado_home">Logado com sucesso</string>
</resources>